# concentrated-liquidity-amm

./: .gitattributes  .gitignore  Anchor.toml  Cargo.toml  LEARNING_LOG.md  Project.md  et --hard 86d01aa  how 86d01aa --no-pager  learning_material.md  lib.rs  package-lock.json  package.json  tatus
playground/: index.html  package-lock.json  package.json
playground/src/: App.tsx  clmmMath.ts  styles.css
programs/concentrated_liquidity/: Cargo.toml
programs/concentrated_liquidity/src/: errors.rs  lib.rs  math.rs  state.rs
programs/concentrated_liquidity/src/instructions/: close_position.rs  create_position.rs  initialize_pool.rs  initialize_tick_array.rs  mod.rs  swap.rs
tests/: concentrated_liquidity.ts
