[package]
name = "concentrated_liquidity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "concentrated_liquidity"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }

