[package]
name = "concentrated_liquidity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "concentrated_liquidity"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }

